--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -31,7 +31,7 @@
 
         <label for="email">メールアドレス</label>
         <input type="text" th:field="*{email}" th:errorclass="err">
-        <span th:errors="*{age}" class="err"></span>
+        <span th:errors="*{email}" class="err"></span>
         <br>
         <br>
         <input type="submit" value="登録実行">
